Fix script source path in 2026 Quiz HTML file

--- a/2026-Quiz/mrFJkDjXrZfeRDjDdRgs.html
+++ b/2026-Quiz/mrFJkDjXrZfeRDjDdRgs.html
@@ -6,6 +6,6 @@
     <title>2026 Quiz</title>
 </head>
 <body>
-    <script src="../mrFJkDjXrZfeRDjDdRgs.js"></script>
+    <script src="mrFJkDjXrZfeRDjDdRgs.js"></script>
 </body>
 </html>
